<resources>
    <string name="app_name">Alpha Fitness</string>
    <string name="app_name_caps">ALPHA FITNESS</string>
    <string name="title_activity_maps">Map</string>
    <string name="start_workout">Start Workout</string>
    <string name="open_maps">Open Maps</string>
    <string name="profile_screen">Profile Screen</string>
    <string name="miles">Miles</string>
    <string name="zeroDistance">0.000</string>
    <string name="johnDoe">John Doe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="record_workout">Record Workout</string>
    <string name="duration">Duration</string>
    <string name="minutes">minutes</string>
    <string name="zero_minutes">0:00:00</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="arbitrary_weight">100 lbs</string>
    <string name="average_weekly">Average/Weekly</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="workouts">Workouts</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="all_time">All Time</string>
    <string name="zeroTime">00:00:000</string>
    <string name="workout_details">Workout Details</string>
    <string name="average">Average:</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="_0_0_miles">0.0 miles</string>
    <string name="_0_0_minutes">0.0 minutes</string>
    <string name="_0_times">0 times</string>
    <string name="_0_cal">0 Cal</string>
</resources>
