<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.karan.alphafitness.view.Fitness_DetailsScreen">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/cobalt"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name_caps"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/average_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/toolbar_top"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_top"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:text="@string/workout_details"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="35sp"/>

        <TextView
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:text="@string/average"
            android:gravity="start|center"
            android:background="@color/gray"
            android:textSize="22sp"/>

        <LinearLayout
            android:id="@+id/max_min_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="230dp"
                android:layout_height="35dp"
                android:text="@string/max"
                android:gravity="start"
                android:textSize="20sp"
                android:background="@color/gray"/>

            <TextView
                android:layout_width="230dp"
                android:layout_height="35dp"
                android:text="@string/min"
                android:gravity="start|center"
                android:background="@color/gray"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_marginTop="123dp"
        app:layout_constraintTop_toBottomOf="@+id/average_linear_layout"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.82"
        android:background="@color/cobalt"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </android.support.v7.widget.Toolbar>

</android.support.constraint.ConstraintLayout>
